--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "iview-loader",
+  "name": "ivuel-loader",
   "version": "1.2.1",
   "description": "Better to combine with webpack",
   "homepage": "http://www.iviewui.com",
-  "author": "Aresn",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
@@ -11,15 +10,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iview/iview-loader.git"
-  },
-  "bugs": {
-    "url": "https://github.com/iview/iview-loader/issues"
+    "url": "https://github.com/yuhonyon/ivuel-loader"
   },
   "dependencies": {
     "loader-utils": "^1.1.0"
-  },
-  "devDependencies": {
-    "webpack": "^2.2.1"
   }
 }
